--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,30 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/activityMain">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/city"
             android:text="Hello Word"
-            android:textSize="50dp"
+            android:textSize="20dp"
             android:layout_marginTop="500dp"/>
 
+        <Button
+            android:id="@+id/loc"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="200dp"
+            android:layout_marginLeft="100dp"
+            android:layout_height="wrap_content"
+            android:text="Location" />
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="match_parent" >
+        </FrameLayout>
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -33,6 +44,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
             android:elevation="4dp" />
+
 
 
     </RelativeLayout>
